inplemented graph into polyschema, added graph rules for neo4j, adjusted graph routing