@@ -19,14 +19,13 @@ package org.polypheny.db.catalog.entity;
 
 import com.google.common.collect.ImmutableMap;
 import java.io.Serializable;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 import lombok.EqualsAndHashCode;
 import lombok.NonNull;
 import lombok.RequiredArgsConstructor;
 import org.polypheny.db.adapter.Adapter.AdapterProperties;
-import org.polypheny.db.type.PolyType;
+import org.polypheny.db.catalog.Catalog.NamespaceType;
 
 @EqualsAndHashCode
 public class CatalogAdapter implements CatalogObject {
@@ -38,8 +37,7 @@ public class CatalogAdapter implements CatalogObject {
     public final String adapterClazz;
     public final AdapterType type;
     public final ImmutableMap<String, String> settings;
-    public final List<PolyType> unsupportedTypes;
-    public final PolyType substitutionType;
+    public final List<NamespaceType> supportedNamespaces;
 
 
     public enum AdapterType {STORE, SOURCE}
@@ -59,8 +57,7 @@ public class CatalogAdapter implements CatalogObject {
         // general settings are provided by the annotations of the adapter class
         try {
             AdapterProperties annotations = Class.forName( adapterClazz ).getAnnotation( AdapterProperties.class );
-            this.unsupportedTypes = Arrays.asList( annotations.unsupportedTypes() );
-            this.substitutionType = annotations.substitutionType();
+            this.supportedNamespaces = List.of( annotations.supportedSchemaTypes() );
         } catch ( ClassNotFoundException e ) {
             throw new RuntimeException( "The provided Adapter is not correctly annotated." );
         }
